--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -107,10 +107,9 @@ body {
 
 #grid-container {
   order: 2;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: center;
+  display: grid;
+  grid-template-columns: repeat(64, 1fr);
+  grid-template-rows: repeat(64, 1fr);
   width: 70%;
   height: 90%;
   background-color: var(--base-white);
@@ -119,8 +118,10 @@ body {
   cursor: crosshair;
 }
 
-.grid-container > div {
-  flex: 1 0 auto;
-  height: auto;
+.row,
+.column {
+  width: 100%;
+  height: 100%;
+  min-width: 0;
+  min-height: 0;
 }
-
