--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -20,7 +20,7 @@ body {
   padding: 0;
   font-family: 'Montserrat', sans-serif;
   color: var(--base-dark-gray);
-  background-color: var(--base-white);
+  background-color: var(--accent-orange);
 
 }
 
@@ -28,12 +28,12 @@ body {
   /* max-width: 1440px; */
   min-width: 780px;
   margin: 0 auto;
-  height: 100%;
+  height: auto;
   margin: 0;
   padding: 0;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
 }
 
@@ -42,16 +42,17 @@ body {
   justify-content: flex-start;
   align-items: center;
   width: 100%;
-  height: 10vh;
+  height: 4vh;
+  margin-bottom: 50px;
   background-color: var(--base-dark-gray);
   border-bottom: 3px solid var(--base-dark-gray);
 }
 
 .game-title {
   position: inherit;
-  font-size: 4.2rem;
+  font-size: 3rem;
   font-weight: 700;
-  margin: 0 0 0 53px;
+  margin: 0 0 0 65px;
   color: var(--accent-orange);
   -webkit-text-stroke: #b45151;
   -webkit-text-stroke-width: 2px;
@@ -77,28 +78,38 @@ body {
   margin: 0;
   padding: 0;
   background-color: var(--accent-orange);
-  border-right: 3px solid var(--base-dark-gray);
+  /* border-right: 3px solid var(--base-dark-gray); */
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
+  justify-content: space-between;
   align-items: center;
 
 }
 
-.etch-a-sketch-clear-btn {
+.size-btns-container {
+  width: 70%;
+  height: 70%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+
+.ctrl-btns {
   width: 70%;
   height: 10%;
   border-radius: 4px;
-  margin-bottom: 30px;
+  margin-bottom: 50px;
   font-size: 3rem;
   font-weight: 700;
-  border: 3px solid var(--accent-red);
+  border: 6px solid var(--accent-red);
   color: var(--accent-red);
   background-color: var(--accent-orange);
 
 }
 
-.etch-a-sketch-clear-btn:hover {
+.ctrl-btns:hover {
   background-color: var(--accent-red);
   color: var(--accent-orange);
   -webkit-text-stroke: #b45151;
@@ -108,20 +119,23 @@ body {
 #grid-container {
   order: 2;
   display: grid;
-  grid-template-columns: repeat(64, 1fr);
-  grid-template-rows: repeat(64, 1fr);
-  width: 70%;
-  height: 90%;
+  grid-template-columns: repeat(32, 1fr);
+  grid-template-rows: repeat(32, 1fr);
+  width: 900px;
+  height: 900px;
+  /* overflow: hidden; */
   background-color: var(--base-white);
-  border: 2px solid var(--accent-orange);
+  border: 6px solid var(--accent-red);
   margin: 0 30px;
   cursor: crosshair;
+  z-index: 2;
 }
 
 .row,
 .column {
   width: 100%;
-  height: 100%;
+  height: 97.7%;
   min-width: 0;
   min-height: 0;
+  z-index: 1;
 }
