Small Grid Button Done

--- a/assets/css/normalize.css
+++ b/assets/css/normalize.css
@@ -12,6 +12,10 @@ CSS
    ========================================================================== */
 
 /* Document */
+* {
+  box-sizing: border-box;
+}
+
 
 html {
   line-height: 1.15;
