--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,27 +1,23 @@
 :root {
-  --base-white: #FFFFFF;
-  --base-light-gray: #F5F5F5;
-  --base-gray: #DCDCDC;
+  --base-white: #ffffff;
+  --base-light-gray: #f5f5f5;
+  --base-gray: #dcdcdc;
   --base-dark-gray: #161616;
   --base-black: #000000;
 
-  --accent-yellow: #FFD700;
+  --accent-yellow: #ffd700;
   --accent-orange: #242424;
   --accent-red: #b45151;
 
-  --etch-a-sketch-gray: #C7C7C7;
+  --etch-a-sketch-gray: #c7c7c7;
 }
-
-
-
 
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   color: var(--base-dark-gray);
   background-color: var(--accent-orange);
-
 }
 
 #container {
@@ -42,7 +38,7 @@ body {
   justify-content: flex-start;
   align-items: center;
   width: 100%;
-  height: 4vh;
+  height: 7vh;
   margin-bottom: 50px;
   background-color: var(--base-dark-gray);
   border-bottom: 3px solid var(--base-dark-gray);
@@ -56,20 +52,18 @@ body {
   color: var(--accent-orange);
   -webkit-text-stroke: #b45151;
   -webkit-text-stroke-width: 2px;
-  
+
   letter-spacing: 0.7rem;
 }
-
 
 #game-container {
   width: 100%;
   height: 90vh;
   background-color: var(--accent-orange);
   display: flex;
-  justify-content: flex-start;
+  justify-content: flex;
   align-items: center;
 }
-
 
 .etch-a-sketch-controls {
   order: 1;
@@ -83,7 +77,6 @@ body {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-
 }
 
 .size-btns-container {
@@ -93,8 +86,8 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-top: -74px;
 }
-
 
 .ctrl-btns {
   width: 70%;
@@ -106,36 +99,35 @@ body {
   border: 6px solid var(--accent-red);
   color: var(--accent-red);
   background-color: var(--accent-orange);
-
 }
 
 .ctrl-btns:hover {
   background-color: var(--accent-red);
   color: var(--accent-orange);
   -webkit-text-stroke: #b45151;
+}
 
+.clear-btn {
+  margin-bottom: 128px;
 }
 
 #grid-container {
   order: 2;
   display: grid;
-  grid-template-columns: repeat(32, 1fr);
-  grid-template-rows: repeat(32, 1fr);
-  width: 900px;
-  height: 900px;
-  /* overflow: hidden; */
+  grid-template-columns: repeat(16, 1fr);
+  grid-template-rows: repeat(16, 1fr);
+  width: 700px;
+  height: 700px;
+  overflow: none;
   background-color: var(--base-white);
   border: 6px solid var(--accent-red);
-  margin: 0 30px;
+  margin: 0 0 0 300px;
   cursor: crosshair;
   z-index: 2;
 }
 
 .row,
-.column {
-  width: 100%;
-  height: 97.7%;
-  min-width: 0;
-  min-height: 0;
-  z-index: 1;
+.columns {
+  /* width: 99%; */
+  height: 39.8px;
 }
