--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,12 +2,12 @@
   --base-white: #ffffff;
   --base-light-gray: #f5f5f5;
   --base-gray: #dcdcdc;
-  --base-dark-gray: #161616;
+  --base-dark-gray: #1a1a1a;
   --base-black: #000000;
 
   --accent-yellow: #ffd700;
-  --accent-orange: #242424;
-  --accent-red: #b45151;
+  --accent-orange: #0e0c0c;
+  --accent-red: #e43333;
 
   --etch-a-sketch-gray: #c7c7c7;
 }
