Changed whole code

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -12,154 +12,8 @@
   --etch-a-sketch-gray: #c7c7c7;
 }
 
-body {
-  margin: 0;
-  padding: 0;
-  font-family: "Montserrat", sans-serif;
-  color: var(--base-dark-gray);
-  background-color: var(--accent-orange);
-}
-
-#container {
-  /* max-width: 1440px; */
-  min-width: 780px;
-  margin: 0 auto;
-  height: auto;
-  margin: 0;
-  padding: 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-#main-header {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  width: 100%;
-  height: 7vh;
-  /* margin-bottom: 20px; */
-  background-color: var(--base-dark-gray);
-  border-bottom: 6px solid var(--accent-red);
-}
-
-.game-title {
-  position: inherit;
-  font-size: 3rem;
-  font-weight: 700;
-  margin: 0 0 0 65px;
-  color: var(--accent-red);
-  /* -webkit-text-stroke: #b45151; */
-  /* -webkit-text-stroke-width: px; */
-
-  letter-spacing: 0.7rem;
-}
-
-#game-container {
-  width: 100%;
-  height: 100%;
-  background-color: var(--accent-orange);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.etch-a-sketch-controls {
-  order: 1;
-  height: 100%;
-  width: 100%;
-  margin: 0;
-  padding: 0;
-  background-color: var(--accent-orange);
-  /* border-right: 3px solid var(--base-dark-gray); */
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: flex-start;
-}
-
-.size-btns-container {
-  width: 100%;
-  height: 80px;
-  background-color: var(--base-dark-gray);
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  align-items: center;
-  margin-bottom: 40px;
-}
-
-.ctrl-btns {
-  width: 10%;
-  height: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 4px;
-  padding: 8px 12px;
-  font-size: 1.4rem;
-  font-weight: 500;
-  border: 3px solid var(--accent-red);
-  color: var(--accent-red);
-  background-color: var(--accent-orange);
-}
-
-.ctrl-btns:hover {
-  background-color: var(--accent-red);
-  color: var(--accent-orange);
-  -webkit-text-stroke: #b45151;
-}
-
-.clear-btn {
-  /* margin-bottom: 128px; */
-  
-}
-
-#grid-container {
-  order: 2;
-  display: grid;
-  grid-template-columns: repeat(64, 1fr);
-  grid-template-rows: repeat(64, 1fr);
-  width: 700px;
-  height: 700px;
-  overflow: none;
-  background-color: var(--base-white);
-  border: 6px solid var(--accent-red);
-  margin: 0 0 0 30px;
-  cursor: crosshair;
-  z-index: 1;
-  /* pointer-events: none; */
-}
-
-.grid-row {
-  display: flex;
-  flex-direction: column;
-}
-
-
-.small-grid-cell {
-  width: 43.8px;
-  height: 43.8px;
-  border: 1px solid #000000;
-  box-sizing: border-box;
-}
-
-.medium-grid-cell {
-  width: 21.9px;
-  height: 21.9px;
-  border: 1px solid #000000;
-  box-sizing: border-box;
-}
-
-.large-grid-cell {
-  width: 10.96px;
-  height: 10.96px;
-  border: 1px solid #000000;
-  box-sizing: border-box;
-}
-
-.box {
-  border: 1px solid #000000;
+.game-grid {
+  background-color: blue;
+  width: 200px;
+  height: 200px;
 }
